--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
   <head>
     <meta
@@ -5,11 +6,9 @@
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
     <title>Shuffle & Sort</title>
-    <link rel="stylesheet" href="./styles/style.css" />
-    <script src="./scripts/index.js"></script>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/index.js" type="application/javascript"></script>
   </head>
-
-  
 
   <body>
     <header>Shuffle and Sort</header>  
